# aoc2024

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
include/: solutions.hpp
include/common/: benchmark.hpp  display.hpp  interval.hpp  matrix_2d.hpp  matrix_nd.hpp  problem.hpp  run.hpp  runner.hpp  utils.hpp  vector_2d.hpp
src/common/: display.cpp  runner.cpp
src/solutions/: day01.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  day06.cpp  day07.cpp  day08.cpp  day09.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day17.cpp  day18.cpp  day19.cpp  day20.cpp  day21.cpp  day22.cpp  day23.cpp  day24.cpp  day25.cpp  main.cpp
